--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,36 +4,43 @@ services:
     container_name: mysql-linsi
     restart: always
     environment:
-      MYSQL_DATABASE: gestion_usuarios
-      MYSQL_ROOT_PASSWORD: root1234
-    ports:
-      - "3306:3306"
+      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
+      MYSQL_DATABASE: ${MYSQL_DATABASE}
+      MYSQL_USER: ${MYSQL_USER}
+      MYSQL_PASSWORD: ${MYSQL_PASSWORD}
     volumes:
       - mysql_data:/var/lib/mysql
-
-  phpmyadmin:
-    image: phpmyadmin/phpmyadmin
-    container_name: phpmyadmin-linsi
-    restart: always
-    environment:
-      PMA_HOST: mysql
-      MYSQL_ROOT_PASSWORD: root1234
-    ports:
-      - "8081:80"
-    depends_on:
-      - mysql
+    networks:
+      - red-linsi
 
   app:
     build: .
     container_name: springboot-linsi
-    ports:
-      - "8080:8080"
+    environment:
+      SPRING_DATASOURCE_URL: ${SPRING_DATASOURCE_URL}
+      SPRING_DATASOURCE_USERNAME: ${SPRING_DATASOURCE_USERNAME}
+      SPRING_DATASOURCE_PASSWORD: ${SPRING_DATASOURCE_PASSWORD}
     depends_on:
       - mysql
-    environment:
-      SPRING_DATASOURCE_URL: jdbc:mysql://mysql:3306/gestion_usuarios
-      SPRING_DATASOURCE_USERNAME: root
-      SPRING_DATASOURCE_PASSWORD: root1234
+    networks:
+      - red-linsi
+
+  nginx:
+    image: nginx:alpine
+    container_name: nginx-linsi
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
+      - ./nginx/certs:/etc/nginx/certs
+    depends_on:
+      - app
+    networks:
+      - red-linsi
 
 volumes:
   mysql_data:
+
+networks:
+  red-linsi:
