--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,4 +17,4 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 
 spring.profiles.active=prod
 
-jwt.secret=U7fNSbMuHt6AxvMbW7q0yopN/hskE6G7X3Z8SYl8F1k=
+jwt.secret=${JWT_SECRET}
