Se crearon mappers para convertir a DTO cada entidad

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,6 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 spring.profiles.active=prod
 
 jwt.secret=${JWT_SECRET}
+
+# URL base del frontend para la recuperación de contraseña
+app.frontend.url=https://localhost:443
