--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,20 +13,6 @@ services:
     networks:
       - red-linsi
 
-  phpmyadmin:
-    image: phpmyadmin/phpmyadmin
-    container_name: phpmyadmin-linsi
-    restart: always
-    environment:
-      PMA_HOST: mysql
-      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
-    ports:
-      - "8081:80"
-    depends_on:
-      - mysql
-    networks:
-      - red-linsi
-
   app:
     build: .
     container_name: springboot-linsi
@@ -38,6 +24,11 @@ services:
       MAIL_USERNAME: ${MAIL_USERNAME}
       MAIL_PASSWORD: ${MAIL_PASSWORD}
       JWT_SECRET: ${JWT_SECRET}
+      ADMIN_NOMBRE: ${ADMIN_NOMBRE}
+      ADMIN_APELLIDO: ${ADMIN_APELLIDO}
+      ADMIN_PASSWORD: ${ADMIN_PASSWORD}
+      ADMIN_EMAIL: ${ADMIN_EMAIL}
+      ADMIN_DNI: ${ADMIN_DNI}
     depends_on:
       - mysql
     networks:
