--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,3 +21,10 @@ jwt.secret=${JWT_SECRET}
 
 # URL base del frontend para la recuperación de contraseña
 app.frontend.url=https://localhost:443
+
+# Creación de usuario administrador por defecto
+app.admin.nombre=${ADMIN_NOMBRE:admin}
+app.admin.apellido=${ADMIN_APELLIDO:Sistema}
+app.admin.password=${ADMIN_PASSWORD:admin}
+app.admin.email=${ADMIN_EMAIL:admin@example.com}
+app.admin.dni=${ADMIN_DNI:00000000}
